20240810 ./watchlist/hia-iplist.sh updated.
20240810 ./watchlist/hia-iplist.sh updated.
20240810 ./watchlist/hia-parse-stats.sh added.
20240812 ./watchlist/hia-parse-stats.sh updated.
20240818 ./watchlist/hia-parse-http-referer.sh updated.
20240818 ./watchlist/hia-parse-stats.sh updated.
20240819 ./watchlist/hia-scan-tcp.sh updated.
20240819 ./watchlist/hia-scan-udp.sh updated.
20240901 ./watchlist/hia-parse-ssh.sh updated.
20240901 ./watchlist/hia-parse-ssl.sh updated.
20240901 ./watchlist/hia-parse-ver.sh updated.
20240901 ./watchlist/hia-scan-tcp.sh updated.
20240901 ./watchlist/hia-scan-udp.sh updated.
20240902 ./watchlist/hia-parse-ssh.sh updated.
20240902 ./watchlist/hia-parse-ssl.sh updated.
20240902 ./watchlist/hia-parse-ver.sh updated.
20240902 ./watchlist/hia-scan-tcp.sh updated.
20240902 ./watchlist/hia-scan-udp.sh updated.
20240902 ./watchlist/hia-scan-tcp.sh updated.
20240902 ./watchlist/hia-scan-udp.sh updated.
20240908 ./watchlist/hia-scan-udp.sh updated.
20241005 ./watchlist/hia-parse-http-ak.sh updated.
20241020 ./watchlist/hia-scan-tcp.sh updated.
20241020 ./watchlist/hia-scan-udp.sh updated.
20250224 ./walk/l.sh added.
20250224 ./walk/top.sh added.
20250224 ./walk/walk.sh added.
20250224 ./walk/ver-d.sh added.
20250224 ./walk/ver-m.sh added.
20250224 ./walk/counts.sh added.
20250224 ./walk/v.sh added.
20250224 ./walk/walk2.sh added.
20250224 ./walk/shame.sh added.
20250224 ./walk/l.sh updated.
20250224 ./walk/top.sh updated.
20250224 ./walk/ver-d.sh updated.
20250224 ./walk/ver-m.sh updated.
20250224 ./walk/counts.sh updated.
20250224 ./walk/shame.sh updated.
20250224 ./walk/l.sh updated.
20250224 ./test/d3map/d3map.sh updated.
>>>>>>> eddce5efc0794ea0df3ad9257e8bb1feadd8090e
20260108 ./var/www/cjdns/hia/README.txt added.
20260108 ./var/www/cjdns/hia/HOWTO.txt added.
20260108 ./var/www/cjdns/hia/api/README.txt added.
20260108 ./var/www/cjdns/hia/api/api-update.sh added.
20260108 ./var/www/cjdns/hia/api/api-dump.sh added.