@@ -228,3 +228,4 @@
 20260108 ./var/www/cjdns/hia/api/README.txt added.
 20260108 ./var/www/cjdns/hia/api/api-update.sh added.
 20260108 ./var/www/cjdns/hia/api/api-dump.sh added.
+20260108 ./var/www/cjdns/hia/watchlist/clean.sh added.
